--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -5,11 +6,12 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --color-orange: #e48c40;
+  --color-green: #90f545;
+  --color-mint: #bfd5ce;
+  --color-dark: #242424;
+  --font-orbitron: 'Orbitron', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +24,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Orbitron', sans-serif !important;
+}
+
+.font-press {
+  font-family: "Press Start 2P", system-ui !important;
 }
